--- a/Inventaire/MainWindowView.xaml
+++ b/Inventaire/MainWindowView.xaml
@@ -44,14 +44,14 @@
                 </MenuItem>
                 
                 <MenuItem Header="Enregistrement">
-                    <MenuItem Header="Nouveau" Command="{Binding NewItemCommand}"/>
+                    <MenuItem Header="Nouveau Client" Command="{Binding NewCustomerCommand}"/>
                 </MenuItem>
             </Menu>
         </StackPanel>
         
         
         <ToolBar DockPanel.Dock="Top">
-            <Button >
+            <Button Command="{Binding NewCustomerCommand}">
                 <Image Source="/images/new_user.png" Height="32" Width="32" Stretch="Uniform"/>
             </Button>
             <Separator/>
