--- a/Inventaire/Views/CustomersView.xaml
+++ b/Inventaire/Views/CustomersView.xaml
@@ -118,7 +118,11 @@
                         <DataGridTemplateColumn Header="Actions">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
-                                    <Button>Voir</Button>
+                                    <Button Command="{Binding DataContext.DisplayInvoiceCommand,
+                                            RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DockPanel}}"
+                                            CommandParameter="{Binding}">
+                                            Voir
+                                    </Button>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
