--- a/Inventaire/Views/InvoicesView.xaml
+++ b/Inventaire/Views/InvoicesView.xaml
@@ -47,10 +47,10 @@
             <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding SelectedInvoice.InvoiceId, Mode=OneWay}"/>
             <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding SelectedInvoice.CreationDateTime, Mode=OneWay}"/>
             <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding SelectedInvoice.Customer.Info, Mode=OneWay}"/>
-            <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding SelectedInvoice.SubTotal}"/>
-            <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding SelectedInvoice.FedTax, Mode=OneWay}"/>
-            <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding SelectedInvoice.ProvTax, Mode=OneWay}"/>
-            <TextBox Grid.Row="6" Grid.Column="1" Text="{Binding SelectedInvoice.Total, Mode=OneWay}"/>
+            <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding SelectedInvoice.SubTotal, StringFormat={}{0:C2}}"/>
+            <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding SelectedInvoice.FedTax, StringFormat={}{0:C2}, Mode=OneWay}"/>
+            <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding SelectedInvoice.ProvTax, StringFormat={}{0:C2}, Mode=OneWay}"/>
+            <TextBox Grid.Row="6" Grid.Column="1" Text="{Binding SelectedInvoice.Total, StringFormat={}{0:C2}, Mode=OneWay}"/>
         </Grid>
 
     </Grid>
